sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:10: error: '(' expected but identifier found.
      if plusPetit(i+1, i) {
         ^AlgCocktailSort2:14: error: illegal start of simple expression
    }
    ^